Fix layout overlap by moving text centering logic to wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ body.loaded #preloader {
     height: 1em;
     /* anchor block height */
     z-index: 2;
+    margin-left: calc(-0.28em + var(--p, 0) * 0.28em);
 }
 
 .huge-word {
